Made footer bm black and made the headers the same height

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 	</nav>
 
 	<!-- INTRO SLIDE -->
-	<section class="slide fade" data-name="home" id="intro">
+	<section class="slide fade" data-name="home" id=" ">
 		<div class="content">
-			<div class="container" style="height: 760px;">
+			<div class="container" style="height: 560px;">
 				<div class="wrap">
 
 					<div class="fix-10-12">
@@ -191,7 +191,7 @@
 
 					</div>
 					<div class="center-m-down">
-						<a class="common-Button blue text-white center popupTrigger" data-popup-id="ispect-projects">Se fler iSpect-projekt</a>
+						<a class="common-Button white text-blue fromCenter popupTrigger" data-popup-id="ispect-projects">Se fler iSpect-projekt</a>
 					</div>
 
 				</div>
@@ -259,7 +259,7 @@
 			</div>
 		</div>
 	</article>
-	<section class="slide blue autoHeight customFooter">
+	<section class="slide lighter-black autoHeight customFooter">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
