--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -201,7 +201,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="slide blue autoHeight customFooter">
+	<section class="slide lighter-black autoHeight customFooter">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
