--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -127,7 +127,7 @@
 	<!-- Slide #55 -->
 	<section class="slide fade kenBurns" id="">
 		<div class="content">
-			<div class="container" style="height: 360px;">
+			<div class="container" style="height: 560px;">
 				<div class="wrap">
 					<div class="fix-10-12">
 						<h1 class="hero-title">Nyheter från Besiktningsman.se</h1>
@@ -174,7 +174,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="slide blue autoHeight customFooter">
+	<section class="slide lighter-black autoHeight customFooter">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
