--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -44,7 +44,7 @@
 	  </script>
 	<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/ybt1le09';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
 	<!-- Intercom chat and user identification -->
-	
+
 </head>
 
 <body class="slides scroll simplifiedMobile">
@@ -195,7 +195,7 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse flex-phone">
 							<li class="col-6-12 left ae-1 fromLeft">
-								<img class="macbook-61 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" style="border-radius:8px;" src="../assets/img/backgrounds/brf_orange.jpg" alt="Foto av BRF i Belfast" />
+								<img class="macbook-61 margin-bottom-3 soft-shadow" data-action="zoom" width="1000" style="border-radius:8px;" src="../assets/img/backgrounds/brf.jpg" alt="Foto av BRF i Belfast" />
 							</li>
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Besiktningstjänster för bostadsrättsföreningar</h1>
@@ -254,7 +254,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="slide blue autoHeight customFooter">
+	<section class="slide lighter-black autoHeight customFooter">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
