--- a/karriar/index.html
+++ b/karriar/index.html
@@ -47,7 +47,7 @@
 	  </script>
 	<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/ybt1le09';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
 	<!-- Intercom chat and user identification -->
-	
+
 </head>
 
 <body class="slides scroll simplifiedMobile">
@@ -132,7 +132,7 @@
 	<!-- Slide #55 -->
 	<section class="slide fade contact" id="">
 		<div class="content">
-			<div class="container" style="height:660px;">
+			<div class="container" style="height:560px;">
 				<div class="wrap">
 					<div class="container-lg">
 						<h1 class="">Sveriges ledande entreprenadbesiktningsföretag <br>söker fler besiktningsmän!</h1>
@@ -191,7 +191,7 @@
 
 	</section>
 
-	<section class="slide blue autoHeight customFooter">
+	<section class="slide lighter-black autoHeight customFooter">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
