--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -135,7 +135,7 @@
 		<div class="content">
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
-					<div class="fix-10-12">
+					<div class="fix-10-12" style="padding-top: 5%;">
 							<h1 class="">Vårt erbjudande</h1>
 							<a href="#foretag" class="menu inlineBlock margin-right-2 underline"><h3 class="text">Företag</h3></a>
 							<a href="#brf" class="menu inlineBlock underline"><h3 class="">BRF</h3></a>
