--- a/karriar/index.html
+++ b/karriar/index.html
@@ -135,7 +135,7 @@
 		<div class="content">
 			<div class="container" style="height:560px;">
 				<div class="wrap">
-					<div class="container-lg">
+					<div class="container-lg padding-top-10">
 						<h1 class="">Sveriges ledande entreprenadbesiktningsföretag <br>söker fler besiktningsmän!</h1>
 						<p class="">
 							<a href="#bmText">
