--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -130,7 +130,7 @@
 		<div class="content">
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
-					<div class="fix-10-12">
+					<div class="fix-10-12" style="padding-top: 5%;">
 						<h1 class="hero-title">Nyheter från Besiktningsman.se</h1>
 					</div>
 				</div>
