--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -138,7 +138,7 @@
 		</div>
 		<div class="background" style="background-image:url(../assets/img/backgrounds/keyboard.jpg)"></div>
 	</section>
-	<section class="slide fade kenBurns whiteSlide">
+	<section class="slide whiteSlide">
 		<div class="content">
 			<div class="container-lg  margin-top-1 margin-bottom-10">
 				<div class="wrap">
