Updated main page header hero text

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 				<div class="wrap">
 
 					<div class="fix-10-12" style="padding-top: 5%;">
-						<img src="assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="border-bottom">
-						<p class="hero">Sveriges ledande entreprenadbesiktningsföretag</p>
+						<img src="assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="border-bottom" style="border-bottom: none;">
+						<p class="hero" style="font-weight: 400;">Sveriges ledande entreprenadbesiktningsföretag</p>
 						<a href="erbjudande/#foretag" class="common-Button white text-blue fromCenter" style="margin-right: 20px;">FÖRETAG</a><a href="erbjudande/#brf" class="common-Button white fromCenter">BRF / PRIVAT</a>
 					</div>
 
