--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 							<div class="fix-12-12">
 								<ul class="grid">
 									<li class="col-4-12 left">
-										<h3 class="text-blue">Skillnader</h3>
+										<h3>Skillnader</h3>
 										<p class="small">
 											Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja. Ofta sedan byggnaden tagits i bruk.
 											<br>
@@ -398,7 +398,7 @@
 										</p>
 									</li>
 									<li class="col-4-12 left ">
-										<h3 class="text-blue">Fördelar</h3>
+										<h3>Fördelar</h3>
 										<p class="small">
 											• Inga dolda fel
 											<br> • Inga onödiga produktionsstopp
@@ -410,7 +410,7 @@
 										</p>
 									</li>
 									<li class="col-4-12 left">
-										<h3 class="text-blue">Effekter</h3>
+										<h3>Effekter</h3>
 										<p class="small">
 											Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostader för felavhjälpning, från byggstart fram till att den 10-åriga garantiperioden passerats.
 											<br>
