Footer changes + minor things

--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
 								<h1>Entreprenadbesiktning som ökar lönsamheten.</h1>
-								<p class="small">
+								<p>
 									Besiktningsman.se erbjuder entreprenadbesiktning som ger sänkt kostnad och ökad lönsamhet i projekt, samt möjlighet att överlämna ett färdigt projekt med noll byggfel på avtalad dag.
 								</p>
 								<a href="kontakt/" class="common-Button blue text-white">kontakta oss</a>
 							</li>
 							<div class="col-6-12 left fromRight">
 								<p class="small text-blueGrey margin-bottom-2" style="">Kvar av projektets avkastning fram till garantiperiodens utgång efter 10 år. Ett exempel.</p>
-								<img class="soft-shadow margin-0 img-size" data-action="zoom" style="border-radius: 8px;margin: 0px !important;" src="assets/img/ispect/graph_blue.jpg" alt="Graf av entreprenadkostnader" />
+								<img class="soft-shadow margin-0 img-size" style="border-radius: 8px;margin: 0px !important;" src="assets/img/ispect/graph_blue.jpg" alt="Graf av entreprenadkostnader" />
 							</div>
 						</ul>
 					</div>
@@ -190,7 +190,7 @@
 							<div class="col-xs-12 col-sm-6">
 								<blockquote class="Quote Quote--lyft">
 									<h2><a href="https://ncc.se"><img src="assets/img/logos/ncc_white.png" width="116"></a></h2>
-									<p class="small">
+									<p>
 										Besiktningsman.se finns ute på Tingsnotarien, Djurgården just nu och ser att bygget följer branschens alla regler och standarder tillsammans med NCC.
 									</p>
 								</blockquote>
@@ -270,7 +270,7 @@
 	<section class="slide lighter-black autoHeight customFooter">
 		<div class="content">
 			<div class="container">
-				<div class="wrap">
+				<div class="container-lg">
 
 					<ul class="grid fixedSpaces left">
 						<li class="col-5-10 wide-col ae-3">
@@ -278,35 +278,35 @@
 						</li>
 						<li class="col-5-10 ae-3">
 							<h3 class="margin-bottom-1">Kontor</h3>
-							<p class="small"><a href="mailto:stockholm@besiktningsman.se">Stockholm</a></p>
-							<p class="small"><a href="mailto:helsingborg@besiktningsman.se">Helsingborg</a></p>
-							<p class="small"><a href="mailto:goteborg@besiktningsman.se">Göteborg</a></p>
-							<p class="small"><a href="mailto:norrkoping@besiktningsman.se">Norrköping</a></p>
-							<p class="small"><a href="mailto:uppsala@besiktningsman.se">Uppsala</a></p>
+							<p><a href="mailto:stockholm@besiktningsman.se">Stockholm</a></p>
+							<p><a href="mailto:helsingborg@besiktningsman.se">Helsingborg</a></p>
+							<p><a href="mailto:goteborg@besiktningsman.se">Göteborg</a></p>
+							<p><a href="mailto:norrkoping@besiktningsman.se">Norrköping</a></p>
+							<p><a href="mailto:uppsala@besiktningsman.se">Uppsala</a></p>
 						</li>
 						<li class="col-5-10 ae-3">
 							<h3 class="margin-bottom-1">Se mer</h3>
-							<p class="small"><a href="om_oss/">Om oss</a></p>
-							<p class="small"><a href="karriar/">Karriär</a></p>
-							<p class="small"><a href="nyheter/">Nyheter</a></p>
-							<p class="small"><a href="erbjudande/">Vårt erbjudande</a></p>
-							<p class="small"><a href="kontakt/">Kontakt</a></p>
-							<p class="small popupTrigger" data-popup-id="policy">Våra policys</p>
+							<p><a href="om_oss/">Om oss</a></p>
+							<p><a href="karriar/">Karriär</a></p>
+							<p><a href="nyheter/">Nyheter</a></p>
+							<p><a href="erbjudande/">Vårt erbjudande</a></p>
+							<p><a href="kontakt/">Kontakt</a></p>
+							<p class="popupTrigger" data-popup-id="policy">Våra policys</p>
 						</li>
 						<li class="col-5-10 ae-4">
 							<h3 class="margin-bottom-1">Länkar</h3>
-							<p class="small"><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
-							<p class="small"><a target="_blank" href="http://sbr.se/">SBR</a></p>
-							<p class="small"><a target="_blank" href="http://www.boverket.se/sv/lag--ratt/">Boverket - byggregler</a></p>
-							<p class="small"><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
-							<p class="small"><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
+							<p><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
+							<p><a target="_blank" href="http://sbr.se/">SBR</a></p>
+							<p><a target="_blank" href="http://www.boverket.se/sv/lag--ratt/">Boverket - byggregler</a></p>
+							<p><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
+							<p><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
 						</li>
 						<li class="col-5-10 ae-5">
 							<h3 class="margin-bottom-1">Följ oss</h3>
-							<p class="small"><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
-							<p class="small"><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
-							<p class="small"><a target="_blank" href="https://www.facebook.com/Besiktningsman/">Facebook</a></p>
-							<p class="small"><a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/">Linkedin</a></p>
+							<p><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
+							<p><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
+							<p><a target="_blank" href="https://www.facebook.com/Besiktningsman/">Facebook</a></p>
+							<p><a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/">Linkedin</a></p>
 						</li>
 					</ul>
 
@@ -325,7 +325,7 @@
 						<h1 class="">Våra policys</h1>
 						<div class="text-58">
 							<h2 class="text-58">Miljö</h2>
-							<p class="small">
+							<p>
 								Miljöarbetet skall vara förebyggande och öppet med ständig förbättring i fokus.
 								<br>
 								<br> I vår verksamhet ska miljölagstiftning och myndighetskrav utgöra miniminivå för miljöarbetet.
@@ -344,25 +344,25 @@
 											Detta ger till resultat att mångfalds- och jämlikhetsarbetet blir ett naturligt inslag i verksamheten.</h3>
 							</li>
 							<li class="col-12-12">
-								<p class="small">
+								<p>
 									Vi arbetar utifrån inställningen att ett lyckat mångfalds- och jämlikhetsarbete leder till jämställdhet. Detta arbete främjar både medarbetarnas och företagets utveckling.
 									<br>
 									<br> Praktiskt innebär det bland annat att medarbetarna på företaget ska representera en mångfald vad gäller:
 									<ul>
 										<li>
-											<p class="small">• Man – Kvinna</p>
+											<p>• Man – Kvinna</p>
 										</li>
 										<li>
-											<p class="small">• Ung – Gammal</p>
+											<p>• Ung – Gammal</p>
 										</li>
 										<li>
-											<p class="small">• Olika kulturella bakgrunder</p>
+											<p>• Olika kulturella bakgrunder</p>
 										</li>
 										<li>
-											<p class="small">• Olika kompetenser</p>
+											<p>• Olika kompetenser</p>
 										</li>
 										<li>
-											<p class="small">• Geografisk spridning</p>
+											<p>• Geografisk spridning</p>
 										</li>
 									</ul>
 									<p>Ingen ska diskrimineras på grund av kön eller sexuell läggning.</p>
@@ -391,7 +391,7 @@
 								<ul class="grid">
 									<li class="col-4-12 left">
 										<h3>Skillnader</h3>
-										<p class="small">
+										<p>
 											Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja. Ofta sedan byggnaden tagits i bruk.
 											<br>
 											<br> Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
@@ -399,7 +399,7 @@
 									</li>
 									<li class="col-4-12 left ">
 										<h3>Fördelar</h3>
-										<p class="small">
+										<p>
 											• Inga dolda fel
 											<br> • Inga onödiga produktionsstopp
 											<br> • Ökad kvalitetssträvan främjas
@@ -411,7 +411,7 @@
 									</li>
 									<li class="col-4-12 left">
 										<h3>Effekter</h3>
-										<p class="small">
+										<p>
 											Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostader för felavhjälpning, från byggstart fram till att den 10-åriga garantiperioden passerats.
 											<br>
 											<br> Ökad leveranssäkerhet och kundnöjdhet genom ingen eller kraftigt minskad felavhjälpning efter överlämnandet
