--- a/karriar/index.html
+++ b/karriar/index.html
@@ -135,7 +135,7 @@
 		<div class="content">
 			<div class="container" style="height:560px;">
 				<div class="wrap">
-					<div class="container-lg padding-top-10">
+					<div class="container-lg padding-top-10" style="padding-top: 9%;">
 						<h1 class="">Sveriges ledande entreprenadbesiktningsföretag <br>söker fler besiktningsmän!</h1>
 						<p class="">
 							<a href="#bmText">
@@ -158,7 +158,7 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse flex-phone">
 							<li class="col-6-12 left ae-1 fromLeft">
-								<img class="macbook-61 margin-bottom-3 soft-shadow" data-action="zoom" style="border-radius: 8px;" src="../assets/img/ispect/bm_pairs.png" alt="Foto av tre besiktningsmän" />
+								<img class="macbook-61 margin-bottom-3 soft-shadow" style="border-radius: 8px;" src="../assets/img/ispect/bm_pairs.png" alt="Foto av tre besiktningsmän" />
 							</li>
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Vill du...</h1>
@@ -195,7 +195,7 @@
 	<section class="slide lighter-black autoHeight customFooter">
 		<div class="content">
 			<div class="container">
-				<div class="wrap">
+				<div class="container-lg">
 
 					<ul class="grid fixedSpaces left">
 						<li class="col-5-10 wide-col ae-3">
@@ -203,35 +203,35 @@
 						</li>
 						<li class="col-5-10 ae-3">
 							<h3 class="margin-bottom-1">Kontor</h3>
-							<p class="small"><a href="mailto:stockholm@besiktningsman.se">Stockholm</a></p>
-							<p class="small"><a href="mailto:helsingborg@besiktningsman.se">Helsingborg</a></p>
-							<p class="small"><a href="mailto:goteborg@besiktningsman.se">Göteborg</a></p>
-							<p class="small"><a href="mailto:norrkoping@besiktningsman.se">Norrköping</a></p>
-							<p class="small"><a href="mailto:uppsala@besiktningsman.se">Uppsala</a></p>
+							<p><a href="mailto:stockholm@besiktningsman.se">Stockholm</a></p>
+							<p><a href="mailto:helsingborg@besiktningsman.se">Helsingborg</a></p>
+							<p><a href="mailto:goteborg@besiktningsman.se">Göteborg</a></p>
+							<p><a href="mailto:norrkoping@besiktningsman.se">Norrköping</a></p>
+							<p><a href="mailto:uppsala@besiktningsman.se">Uppsala</a></p>
 						</li>
 						<li class="col-5-10 ae-3">
 							<h3 class="margin-bottom-1">Se mer</h3>
-							<p class="small"><a href="../om_oss/">Om oss</a></p>
-							<p class="small"><a href="../karriar/">Karriär</a></p>
-							<p class="small"><a href="../nyheter/">Nyheter</a></p>
-							<p class="small"><a href="../erbjudande/">Vårt erbjudande</a></p>
-							<p class="small"><a href="../kontakt/">Kontakt</a></p>
-							<p class="small popupTrigger" data-popup-id="policy">Våra policys</p>
+							<p><a href="../om_oss/">Om oss</a></p>
+							<p><a href="../karriar/">Karriär</a></p>
+							<p><a href="../nyheter/">Nyheter</a></p>
+							<p><a href="../erbjudande/">Vårt erbjudande</a></p>
+							<p><a href="../kontakt/">Kontakt</a></p>
+							<p class="popupTrigger" data-popup-id="policy">Våra policys</p>
 						</li>
 						<li class="col-5-10 ae-4">
 							<h3 class="margin-bottom-1">Länkar</h3>
-							<p class="small"><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
-							<p class="small"><a target="_blank" href="http://sbr.se/">SBR</a></p>
-							<p class="small"><a target="_blank" href="http://www.boverket.se/sv/lag--ratt/">Boverket - byggregler</a></p>
-							<p class="small"><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
-							<p class="small"><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
+							<p><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
+							<p><a target="_blank" href="http://sbr.se/">SBR</a></p>
+							<p><a target="_blank" href="http://www.boverket.se/sv/lag--ratt/">Boverket - byggregler</a></p>
+							<p><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
+							<p><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
 						</li>
 						<li class="col-5-10 ae-5">
 							<h3 class="margin-bottom-1">Följ oss</h3>
-							<p class="small"><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
-							<p class="small"><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
-							<p class="small"><a target="_blank" href="https://www.facebook.com/Besiktningsman/">Facebook</a></p>
-							<p class="small"><a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/">Linkedin</a></p>
+							<p><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
+							<p><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
+							<p><a target="_blank" href="https://www.facebook.com/Besiktningsman/">Facebook</a></p>
+							<p><a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/">Linkedin</a></p>
 						</li>
 					</ul>
 
@@ -250,7 +250,7 @@
 						<h1 class="">Våra policys</h1>
 						<div class="text-58">
 							<h2 class="text-58">Miljö</h2>
-							<p class="small">
+							<p>
 								Miljöarbetet skall vara förebyggande och öppet med ständig förbättring i fokus.
 								<br>
 								<br> I vår verksamhet ska miljölagstiftning och myndighetskrav utgöra miniminivå för miljöarbetet.
@@ -269,25 +269,25 @@
 											Detta ger till resultat att mångfalds- och jämlikhetsarbetet blir ett naturligt inslag i verksamheten.</h3>
 							</li>
 							<li class="col-12-12">
-								<p class="small">
+								<p>
 									Vi arbetar utifrån inställningen att ett lyckat mångfalds- och jämlikhetsarbete leder till jämställdhet. Detta arbete främjar både medarbetarnas och företagets utveckling.
 									<br>
 									<br> Praktiskt innebär det bland annat att medarbetarna på företaget ska representera en mångfald vad gäller:
 									<ul>
 										<li>
-											<p class="small">• Man – Kvinna</p>
+											<p>• Man – Kvinna</p>
 										</li>
 										<li>
-											<p class="small">• Ung – Gammal</p>
+											<p>• Ung – Gammal</p>
 										</li>
 										<li>
-											<p class="small">• Olika kulturella bakgrunder</p>
+											<p>• Olika kulturella bakgrunder</p>
 										</li>
 										<li>
-											<p class="small">• Olika kompetenser</p>
+											<p>• Olika kompetenser</p>
 										</li>
 										<li>
-											<p class="small">• Geografisk spridning</p>
+											<p>• Geografisk spridning</p>
 										</li>
 									</ul>
 									<p>Ingen ska diskrimineras på grund av kön eller sexuell läggning.</p>
