--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -131,7 +131,7 @@
 	<!-- Slide 1 (#19) -->
 	<section class="slide fade kenBurns" id="">
 		<div class="content">
-			<div class="container" style="height: 560px;">
+			<div class="container" style="height: 560px;padding-top: 9%;">
 				<div class="wrap">
 					<div class="fix-10-12">
 						<h1>Besiktningsman.se</h1>
@@ -165,7 +165,7 @@
 							<p>Huvudkontoret finns i Stockholm och filialer finns i Uppsala, Norrköping, Göteborg och Helsingborg. Våra grundare och ägare är alltjämt aktiva i företaget.</p>
 							<p>Vi leder branschens utveckling och har bland annat skapat en digital besiktningsprocess i samarbete med iSpect och ledande byggföretag. Nyligen blev vi landets första besiktningsföretag att erbjuda radonkontroll.</p>
 							<p>Med vårt helhetskoncept har vi etablerat ett nytt perspektiv på besiktning – som ett aktivt affärsstöd för ökad lönsamhet och leveranssäkerhet i byggprojekt</p>
-							<button class="common-Button white text-blue fromLeft popupTrigger" data-popup-id="ispect-details">Mer om vårt helhetskoncept</button>
+							<button class="common-Button blue text-white fromLeft popupTrigger" data-popup-id="ispect-details">Mer om vårt helhetskoncept</button>
 						</div>
 					</div>
 
@@ -369,7 +369,7 @@
 	<section class="slide lighter-black autoHeight customFooter">
 		<div class="content">
 			<div class="container">
-				<div class="wrap">
+				<div class="container-lg">
 
 					<ul class="grid fixedSpaces left">
 						<li class="col-5-10 wide-col ae-3">
@@ -377,35 +377,35 @@
 						</li>
 						<li class="col-5-10 ae-3">
 							<h3 class="margin-bottom-1">Kontor</h3>
-							<p class="small"><a href="mailto:stockholm@besiktningsman.se">Stockholm</a></p>
-							<p class="small"><a href="mailto:helsingborg@besiktningsman.se">Helsingborg</a></p>
-							<p class="small"><a href="mailto:goteborg@besiktningsman.se">Göteborg</a></p>
-							<p class="small"><a href="mailto:norrkoping@besiktningsman.se">Norrköping</a></p>
-							<p class="small"><a href="mailto:uppsala@besiktningsman.se">Uppsala</a></p>
+							<p><a href="mailto:stockholm@besiktningsman.se">Stockholm</a></p>
+							<p><a href="mailto:helsingborg@besiktningsman.se">Helsingborg</a></p>
+							<p><a href="mailto:goteborg@besiktningsman.se">Göteborg</a></p>
+							<p><a href="mailto:norrkoping@besiktningsman.se">Norrköping</a></p>
+							<p><a href="mailto:uppsala@besiktningsman.se">Uppsala</a></p>
 						</li>
 						<li class="col-5-10 ae-3">
 							<h3 class="margin-bottom-1">Se mer</h3>
-							<p class="small"><a href="../om_oss/">Om oss</a></p>
-							<p class="small"><a href="../karriar/">Karriär</a></p>
-							<p class="small"><a href="../nyheter/">Nyheter</a></p>
-							<p class="small"><a href="../erbjudande/">Vårt erbjudande</a></p>
-							<p class="small"><a href="../kontakt/">Kontakt</a></p>
-							<p class="small popupTrigger" data-popup-id="policy">Våra policys</p>
+							<p><a href="../om_oss/">Om oss</a></p>
+							<p><a href="../karriar/">Karriär</a></p>
+							<p><a href="../nyheter/">Nyheter</a></p>
+							<p><a href="../erbjudande/">Vårt erbjudande</a></p>
+							<p><a href="../kontakt/">Kontakt</a></p>
+							<p class="popupTrigger" data-popup-id="policy">Våra policys</p>
 						</li>
 						<li class="col-5-10 ae-4">
 							<h3 class="margin-bottom-1">Länkar</h3>
-							<p class="small"><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
-							<p class="small"><a target="_blank" href="http://sbr.se/">SBR</a></p>
-							<p class="small"><a target="_blank" href="http://www.boverket.se/sv/lag--ratt/">Boverket - byggregler</a></p>
-							<p class="small"><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
-							<p class="small"><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
+							<p><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
+							<p><a target="_blank" href="http://sbr.se/">SBR</a></p>
+							<p><a target="_blank" href="http://www.boverket.se/sv/lag--ratt/">Boverket - byggregler</a></p>
+							<p><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
+							<p><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
 						</li>
 						<li class="col-5-10 ae-5">
 							<h3 class="margin-bottom-1">Följ oss</h3>
-							<p class="small"><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
-							<p class="small"><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
-							<p class="small"><a target="_blank" href="https://www.facebook.com/Besiktningsman/">Facebook</a></p>
-							<p class="small"><a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/">Linkedin</a></p>
+							<p><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
+							<p><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
+							<p><a target="_blank" href="https://www.facebook.com/Besiktningsman/">Facebook</a></p>
+							<p><a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/">Linkedin</a></p>
 						</li>
 					</ul>
 
@@ -429,7 +429,7 @@
 								<ul class="grid">
 									<li class="col-4-12 left">
 										<h3 class="text-blue">Skillnader</h3>
-										<p class="small">
+										<p>
 											Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja. Ofta sedan byggnaden tagits i bruk.
 											<br>
 											<br> Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
@@ -437,7 +437,7 @@
 									</li>
 									<li class="col-4-12 left ">
 										<h3 class="text-blue">Fördelar</h3>
-										<p class="small">
+										<p>
 											• Inga dolda fel
 											<br> • Inga onödiga produktionsstopp
 											<br> • Ökad kvalitetssträvan främjas
@@ -449,7 +449,7 @@
 									</li>
 									<li class="col-4-12 left">
 										<h3 class="text-blue">Effekter</h3>
-										<p class="small">
+										<p>
 											Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostader för felavhjälpning, från byggstart fram till att den 10-åriga garantiperioden passerats.
 											<br>
 											<br> Ökad leveranssäkerhet och kundnöjdhet genom ingen eller kraftigt minskad felavhjälpning efter överlämnandet
@@ -494,7 +494,7 @@
 						<h1 class="">Våra policys</h1>
 						<div class="text-58">
 							<h2 class="text-58">Miljö</h2>
-							<p class="small">
+							<p>
 								Miljöarbetet skall vara förebyggande och öppet med ständig förbättring i fokus.
 								<br>
 								<br> I vår verksamhet ska miljölagstiftning och myndighetskrav utgöra miniminivå för miljöarbetet.
@@ -513,25 +513,25 @@
 											Detta ger till resultat att mångfalds- och jämlikhetsarbetet blir ett naturligt inslag i verksamheten.</h3>
 							</li>
 							<li class="col-12-12">
-								<p class="small">
+								<p>
 									Vi arbetar utifrån inställningen att ett lyckat mångfalds- och jämlikhetsarbete leder till jämställdhet. Detta arbete främjar både medarbetarnas och företagets utveckling.
 									<br>
 									<br> Praktiskt innebär det bland annat att medarbetarna på företaget ska representera en mångfald vad gäller:
 									<ul>
 										<li>
-											<p class="small">• Man – Kvinna</p>
+											<p>• Man – Kvinna</p>
 										</li>
 										<li>
-											<p class="small">• Ung – Gammal</p>
+											<p>• Ung – Gammal</p>
 										</li>
 										<li>
-											<p class="small">• Olika kulturella bakgrunder</p>
+											<p>• Olika kulturella bakgrunder</p>
 										</li>
 										<li>
-											<p class="small">• Olika kompetenser</p>
+											<p>• Olika kompetenser</p>
 										</li>
 										<li>
-											<p class="small">• Geografisk spridning</p>
+											<p>• Geografisk spridning</p>
 										</li>
 									</ul>
 									<p>Ingen ska diskrimineras på grund av kön eller sexuell läggning.</p>
