--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -228,7 +228,7 @@
 	<section class="slide whiteSlide kenBurns fromLeft" data-name="privat" data-title="Privat" id="privat">
 		<div class="content">
 			<div class="container">
-				<div class="wrap">
+				<div class="container-lg">
 
 					<div class="fix-12-12">
 						<ul class="flex reverse">
@@ -268,35 +268,35 @@
 						</li>
 						<li class="col-5-10 ae-3">
 							<h3 class="margin-bottom-1">Kontor</h3>
-							<p class="small"><a href="mailto:stockholm@besiktningsman.se">Stockholm</a></p>
-							<p class="small"><a href="mailto:helsingborg@besiktningsman.se">Helsingborg</a></p>
-							<p class="small"><a href="mailto:goteborg@besiktningsman.se">Göteborg</a></p>
-							<p class="small"><a href="mailto:norrkoping@besiktningsman.se">Norrköping</a></p>
-							<p class="small"><a href="mailto:uppsala@besiktningsman.se">Uppsala</a></p>
+							<p><a href="mailto:stockholm@besiktningsman.se">Stockholm</a></p>
+							<p><a href="mailto:helsingborg@besiktningsman.se">Helsingborg</a></p>
+							<p><a href="mailto:goteborg@besiktningsman.se">Göteborg</a></p>
+							<p><a href="mailto:norrkoping@besiktningsman.se">Norrköping</a></p>
+							<p><a href="mailto:uppsala@besiktningsman.se">Uppsala</a></p>
 						</li>
 						<li class="col-5-10 ae-3">
 							<h3 class="margin-bottom-1">Se mer</h3>
-							<p class="small"><a href="../om_oss/">Om oss</a></p>
-							<p class="small"><a href="../karriar/">Karriär</a></p>
-							<p class="small"><a href="../nyheter/">Nyheter</a></p>
-							<p class="small"><a href="../erbjudande/">Vårt erbjudande</a></p>
-							<p class="small"><a href="../kontakt/">Kontakt</a></p>
-							<p class="small popupTrigger" data-popup-id="policy">Våra policys</p>
+							<p><a href="../om_oss/">Om oss</a></p>
+							<p><a href="../karriar/">Karriär</a></p>
+							<p><a href="../nyheter/">Nyheter</a></p>
+							<p><a href="../erbjudande/">Vårt erbjudande</a></p>
+							<p><a href="../kontakt/">Kontakt</a></p>
+							<p class="popupTrigger" data-popup-id="policy">Våra policys</p>
 						</li>
 						<li class="col-5-10 ae-4">
 							<h3 class="margin-bottom-1">Länkar</h3>
-							<p class="small"><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
-							<p class="small"><a target="_blank" href="http://sbr.se/">SBR</a></p>
-							<p class="small"><a target="_blank" href="http://www.boverket.se/sv/lag--ratt/">Boverket - byggregler</a></p>
-							<p class="small"><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
-							<p class="small"><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
+							<p><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
+							<p><a target="_blank" href="http://sbr.se/">SBR</a></p>
+							<p><a target="_blank" href="http://www.boverket.se/sv/lag--ratt/">Boverket - byggregler</a></p>
+							<p><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
+							<p><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
 						</li>
 						<li class="col-5-10 ae-5">
 							<h3 class="margin-bottom-1">Följ oss</h3>
-							<p class="small"><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
-							<p class="small"><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
-							<p class="small"><a target="_blank" href="https://www.facebook.com/Besiktningsman/">Facebook</a></p>
-							<p class="small"><a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/">Linkedin</a></p>
+							<p><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
+							<p><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
+							<p><a target="_blank" href="https://www.facebook.com/Besiktningsman/">Facebook</a></p>
+							<p><a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/">Linkedin</a></p>
 						</li>
 					</ul>
 
@@ -321,7 +321,7 @@
 								<ul class="grid">
 									<li class="col-4-12 left">
 										<h3>Skillnader</h3>
-										<p class="small">
+										<p>
 											Vid traditionell besiktning görs normalt bara för- och slutbesiktning, sedan sänds utlåtandet och felavhjälpning kan börja. Ofta sedan byggnaden tagits i bruk.
 											<br>
 											<br> Vår lösning med iSpect omfattar hela byggprocessen. Vi ser till att fel kan förebyggas och att uppkomna fel kan åtgärdas direkt.
@@ -329,7 +329,7 @@
 									</li>
 									<li class="col-4-12 left ">
 										<h3>Fördelar</h3>
-										<p class="small">
+										<p>
 											• Inga dolda fel
 											<br> • Inga onödiga produktionsstopp
 											<br> • Ökad kvalitetssträvan främjas
@@ -341,7 +341,7 @@
 									</li>
 									<li class="col-4-12 left">
 										<h3>Effekter</h3>
-										<p class="small">
+										<p>
 											Ökad lönsamhet i byggprojekt genom kraftigt reducerade kostader för felavhjälpning, från byggstart fram till att den 10-åriga garantiperioden passerats.
 											<br>
 											<br> Ökad leveranssäkerhet och kundnöjdhet genom ingen eller kraftigt minskad felavhjälpning efter överlämnandet
@@ -411,24 +411,24 @@
 												<h2 class="bold">I våra priser ingår:</h2>
 											</li>
 											<li>
-												<p class="small">Vår projektansvarige för all kontakt och samordning med besiktningsman eller besiktningsgrupp kallelser, restid, besiktning på plats, digitalt utskick av utlåtande.</p>
+												<p>Vår projektansvarige för all kontakt och samordning med besiktningsman eller besiktningsgrupp kallelser, restid, besiktning på plats, digitalt utskick av utlåtande.</p>
 											</li>
 											<li>
-												<p class="small">Upprättande av besiktningstidplan med eventuella justeringar, beroende på typ av besiktning,</p>
+												<p>Upprättande av besiktningstidplan med eventuella justeringar, beroende på typ av besiktning,</p>
 											</li>
 											<li>
-												<p class="small">Ett informationsmöte med brf-styrelsen om hur besiktningen går till, beroende på typ av besiktning,</p>
+												<p>Ett informationsmöte med brf-styrelsen om hur besiktningen går till, beroende på typ av besiktning,</p>
 											</li>
 										</ul>
 										<ul>
 											<li>
-												<p class="small">Vid längre samarbeten har ni alltid er ”egen” huvudbesiktningsman och projektansvarige.</p>
+												<p>Vid längre samarbeten har ni alltid er ”egen” huvudbesiktningsman och projektansvarige.</p>
 											</li>
 											<li>
-												<p class="small">I vårt nätverk kan vi även erbjuda projektledning/upphandling.</p>
+												<p>I vårt nätverk kan vi även erbjuda projektledning/upphandling.</p>
 											</li>
 											<li>
-												<p class="small">Om ni har en nyproducerad brf och söker besiktningsgrupp för 2-års besiktning/garantibesiktning offererar vi ett fast pris till er.</p>
+												<p>Om ni har en nyproducerad brf och söker besiktningsgrupp för 2-års besiktning/garantibesiktning offererar vi ett fast pris till er.</p>
 											</li>
 										</ul>
 
@@ -836,7 +836,7 @@
 						<h1 class="">Våra policys</h1>
 						<div class="text-58">
 							<h2 class="text-58">Miljö</h2>
-							<p class="small">
+							<p>
 								Miljöarbetet skall vara förebyggande och öppet med ständig förbättring i fokus.
 								<br>
 								<br> I vår verksamhet ska miljölagstiftning och myndighetskrav utgöra miniminivå för miljöarbetet.
@@ -855,25 +855,25 @@
 											Detta ger till resultat att mångfalds- och jämlikhetsarbetet blir ett naturligt inslag i verksamheten.</h3>
 							</li>
 							<li class="col-12-12">
-								<p class="small">
+								<p>
 									Vi arbetar utifrån inställningen att ett lyckat mångfalds- och jämlikhetsarbete leder till jämställdhet. Detta arbete främjar både medarbetarnas och företagets utveckling.
 									<br>
 									<br> Praktiskt innebär det bland annat att medarbetarna på företaget ska representera en mångfald vad gäller:
 									<ul>
 										<li>
-											<p class="small">• Man – Kvinna</p>
+											<p>• Man – Kvinna</p>
 										</li>
 										<li>
-											<p class="small">• Ung – Gammal</p>
+											<p>• Ung – Gammal</p>
 										</li>
 										<li>
-											<p class="small">• Olika kulturella bakgrunder</p>
+											<p>• Olika kulturella bakgrunder</p>
 										</li>
 										<li>
-											<p class="small">• Olika kompetenser</p>
+											<p>• Olika kompetenser</p>
 										</li>
 										<li>
-											<p class="small">• Geografisk spridning</p>
+											<p>• Geografisk spridning</p>
 										</li>
 									</ul>
 									<p>Ingen ska diskrimineras på grund av kön eller sexuell läggning.</p>
