--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
 						<div class="row start-xs">
 							<div class="col-xs-12 col-sm-6">
 								<blockquote class="Quote Quote--lyft">
-									<h2><a href="https://ncc.se"><img src="assets/img/logos/ncc_white.png" width="116"></a></h2>
+									<h2><a href="https://ikano.se"><img src="assets/img/logos/em_white.png" width="116"></a></h2>
 									<p>
-										Besiktningsman.se finns ute på Tingsnotarien, Djurgården just nu och ser att bygget följer branschens alla regler och standarder tillsammans med NCC.
+										Besiktningsman.se finns ute på BRF Haganova, Torsplan just nu och ser att bygget följer branschens alla regler och standarder.
 									</p>
 								</blockquote>
 							</div>
@@ -446,7 +446,7 @@
 
 		</div>
 	</div>
-	<!-- ispect details Popup Text -->
+	<!-- bm projects details Popup Text -->
 	<div class="popup white" data-popup-id="ispect-projects">
 		<div class="close button closeButton white text-blue left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
 		<div class="content popupContent">
@@ -462,83 +462,41 @@
 			        </div>
 			        <div class="fix-12-12">
 			          <ul class="grid later fixedSpaces equal left">
-			            <li class="col-4-12 ae-3 fromCenter">
+			            <li class="col-4-12 fromCenter">
 			              <div class="box-67">
 			                <div class="thumbnail-67">
-			                  <img src="assets/img/projects/testproject1.jpeg" class="wide"/>
+			                  <img src="assets/img/projects/brf_theview.jpg" class="wide"/>
 			                </div>
 			                <div class="name-67 equalElement table wide">
 			                  <div class="cell">
-			                    <div class="category-67">Baking</div>
-			                    <div class="title-67">Artisan Rye Bread</div>
+			                    <div class="category-67">SKANSKA</div>
+			                    <div class="title-67">BRF The View</div>
 			                  </div>
 			                </div>
 			              </div>
 			            </li>
-			            <li class="col-4-12 ae-4 fromCenter">
+			            <li class="col-4-12 fromCenter">
 			              <div class="box-67">
 			                <div class="thumbnail-67">
-			                  <img src="assets/img/projects/testproject2.jpeg" class="wide"/>
+			                  <img src="assets/img/projects/brf_terrassen.jpg" class="wide"/>
 			                </div>
 			                <div class="name-67 equalElement table wide">
 			                  <div class="cell">
-			                    <div class="category-67">Cooking</div>
-			                    <div class="title-67">Blueberry Muffin</div>
+			                    <div class="category-67">BYGGVESTA</div>
+			                    <div class="title-67">BRF Terrassen</div>
 			                  </div>
 			                </div>
 			              </div>
 			            </li>
-			            <li class="col-4-12 ae-5 fromCenter">
+			            <li class="col-4-12 fromCenter">
 			              <div class="box-67">
 			                <div class="thumbnail-67">
-			                  <img src="assets/img/projects/testproject3.jpeg" class="wide"/>
+			                  <img src="assets/img/projects/brf_skogsstjernan.jpg" class="wide"/>
 			                </div>
 			                <div class="name-67 equalElement table wide">
 			                  <div class="cell">
-			                    <div class="category-67">Preparing</div>
-			                    <div class="title-67">Chopped Parsley</div>
-			                  </div>
-			                </div>
-			              </div>
-			            </li>
-			          </ul>
-								<!-- LIST TWO -->
-								<ul class="grid later fixedSpaces equal left">
-			            <li class="col-4-12 ae-3 fromCenter">
-			              <div class="box-67">
-			                <div class="thumbnail-67">
-			                  <img src="assets/img/projects/testproject1.jpeg" class="wide"/>
-			                </div>
-			                <div class="name-67 equalElement table wide">
-			                  <div class="cell">
-			                    <div class="category-67">Baking</div>
-			                    <div class="title-67">Artisan Rye Bread</div>
-			                  </div>
-			                </div>
-			              </div>
-			            </li>
-			            <li class="col-4-12 ae-4 fromCenter">
-			              <div class="box-67">
-			                <div class="thumbnail-67">
-			                  <img src="assets/img/projects/testproject2.jpeg" class="wide"/>
-			                </div>
-			                <div class="name-67 equalElement table wide">
-			                  <div class="cell">
-			                    <div class="category-67">Cooking</div>
-			                    <div class="title-67">Blueberry Muffin</div>
-			                  </div>
-			                </div>
-			              </div>
-			            </li>
-			            <li class="col-4-12 ae-5 fromCenter">
-			              <div class="box-67">
-			                <div class="thumbnail-67">
-			                  <img src="assets/img/projects/testproject3.jpeg" class="wide"/>
-			                </div>
-			                <div class="name-67 equalElement table wide">
-			                  <div class="cell">
-			                    <div class="category-67">Preparing</div>
-			                    <div class="title-67">Chopped Parsley</div>
+			                    <div class="category-67">IKANO</div>
+			                    <div class="title-67">BRF Skogsstjärnan</div>
 			                  </div>
 			                </div>
 			              </div>
@@ -549,7 +507,6 @@
 			      </div>
 			    </div>
 			  </div>
-			  <div class="background" style="background-image:url(assets/img/img-67.jpg)"></div>
 			</section>
 		</div>
 	</div>
