Added new iPad mockup and tried to make the cookie popover smaller

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<!-- Intercom chat and user identification -->
 	<!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
 	<script type="text/javascript">
-	    window.cookieconsent_options = {"message":"Vår hemsida använder 'cookies' för att kunna leverera den bästa upplevelsen till dig.","dismiss":"Okej","learnMore":"Läs mer","link":null,"theme":"light-floating"};
+	    window.cookieconsent_options = {"message":"Besiktningsman.se använder 'cookies' för att kunna leverera en bra upplevelse.","dismiss":"Okej","learnMore":"Läs mer","link":null,"theme":"light-floating"};
 	</script>
 
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.10/cookieconsent.min.js"></script>
@@ -216,7 +216,7 @@
 					<div class="fix-12-12">
 						<ul class="flex verticalCenter">
 							<li class="col-5-12 ae-1 cell-29">
-								<img src="assets/img/ispect/ipad_front_sv.png" class="iphone-29" alt="Skärmdump av iSpect" />
+								<img src="assets/img/ispect/ipad_screenTilted.png" class="iphone-29" alt="Skärmdump av iSpect" />
 							</li>
 							<li class="col-7-12 left">
 								<h1 class="ae-1 fromLeft">iSpect ger snabb leverans av besiktningsutlåtandet.</h1>
