Uppdaterade om oss loggan

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -131,10 +131,10 @@
 	<!-- Slide 1 (#19) -->
 	<section class="slide fade kenBurns" id="">
 		<div class="content">
-			<div class="container" style="height: 560px;padding-top: 9%;">
+			<div class="container" style="height: 560px;padding-top: 5%;">
 				<div class="wrap">
 					<div class="fix-10-12">
-						<h1>Besiktningsman.se</h1>
+						<img src="../assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="border-bottom" style="border-bottom: none;width:60% !important;">
 						<p>Sveriges ledande entreprenadbesiktningsföretag för nyproduktion och ROT. <br> Bildat 2003 av erfarna besiktningsmän som ett oberoende besiktningsföretag.</p>
 					</div>
 				</div>
