integrated the type form contact form into the website on the contact page rather than just the popover - as it loads slowly any way

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -137,25 +137,19 @@
 					</p>
 					<div class="fix-5-12">
 						<div class="pad shadow selected">
-							<h3 class="text-blue">Ont om tid?</h3>
-							<p class="small bold dark" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
-							<a class="typeform-share common-Button wide blue cropBottom" href="https://sebastian209.typeform.com/to/Qwy9Nf" data-mode="1" target="_blank">Öppna kontaktformuläret</a>
-							<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
+							<h3 class="pad-header">
+								Ont om tid?
+								<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
+							</h3>
+							<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/oZw406" style="width: 100%; height: 400px;" >
+							</div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+
+							<!-- <a class="typeform-share common-Button wide blue cropBottom" href="https://sebastian209.typeform.com/to/Qwy9Nf" data-mode="1" target="_blank">Öppna kontaktformuläret</a> -->
+							<!-- <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script> -->
 							<br>
-							<br>
-							<br>
-							<a class="text-blue popupTrigger small bold underlined" data-popup-id="contactInfo">Söker du en specifik person?</a>
-							<!-- <form action="ajax-email.php" id="contact-form" method="post" class="wide center" data-ajax-form="true">
-								<div class="label cropTop"><label class="cropTop left small bold" for="name55">För och efternamn</label></div>
-								<input class="stroke left wide" id="name55" type="name" name="yourName" placeholder="Ert namn..." required/>
-								<div class="label"><label class="left small bold" for="email55">E-post adress</label></div>
-								<input class="stroke left wide" id="email55" type="email" name="yourEmail" placeholder="E-post adress..." required/>
-								<div class="label cropTop"><label class="cropTop left small bold" for="phone55">Telefon</label></div>
-								<input class="stroke left wide" id="phone55" type="text" name="yourPhone" placeholder="Telefon nr..." required/>
-								<div class="label"><label class="left small bold" for="message55">Meddelande</label></div>
-								<textarea class="left " id="message55" type="text" name="yourMessage" placeholder="Ditt meddelande..." required></textarea>
-								<input class="common-Button wide blue cropBottom" type="submit" name="submit" value="Skicka meddelandet" data-success-text="Skickat!" data-success-class="green" />
-							</form> -->
+							<div class="pad-header">
+								<a class="text-blue popupTrigger small bold underlined" data-popup-id="contactInfo">Söker du en specifik person?</a>
+							</div>
 						</div>
 					</div>
 
