--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<img src="assets/svg/bm_logo_white_top.svg" alt="Besiktningsman.se" class="border-bottom" style="border-bottom: none;">
 						<p class="hero" style="font-weight: 400;">Sveriges ledande entreprenadbesiktningsföretag</p>
-						<a href="erbjudande/#foretag" class="common-Button white text-blue fromCenter" style="margin-right: 20px;">FÖRETAG</a><a href="erbjudande/#brf" class="common-Button white fromCenter">BRF / PRIVAT</a>
+						<a href="erbjudande/#foretag" class="common-Button white text-blue fromCenter" style="margin-right: 20px;">FÖRETAG</a><a href="erbjudande/#brf" class="common-Button white text-blue fromCenter">BRF / PRIVAT</a>
 					</div>
 
 				</div>
@@ -191,7 +191,7 @@
 								<blockquote class="Quote Quote--lyft">
 									<h2><a href="https://ikano.se"><img src="assets/img/logos/em_white.png" width="116"></a></h2>
 									<p>
-										Besiktningsman.se finns ute på BRF Haganova, Torsplan just nu och ser att bygget följer branschens alla regler och standarder.
+										Besiktningsman.se finns ute på BRF Haganova, Torsplan just nu och ser till att bygget följer branschens alla regler och standarder.
 									</p>
 								</blockquote>
 							</div>
