text updates and code comments

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -125,9 +125,8 @@
 		</div>
 	</nav>
 
-	<!-- INTRO SLIDE -->
-	<!-- Slide #55 -->
-	<section class="slide fade kenBurns contact">
+	<!-- typeform contact form -->
+	<section class="slide fade contact">
 		<div class="content">
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
@@ -138,14 +137,11 @@
 					<div class="fix-5-12">
 						<div class="pad shadow selected">
 							<h3 class="pad-header">
-								Ont om tid?
+								Inte tid till att ringa?
 								<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
 							</h3>
-							<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/oZw406" style="width: 100%; height: 400px;" >
-							</div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-
-							<!-- <a class="typeform-share common-Button wide blue cropBottom" href="https://sebastian209.typeform.com/to/Qwy9Nf" data-mode="1" target="_blank">Öppna kontaktformuläret</a> -->
-							<!-- <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script> -->
+							<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/oZw406" style="width: 100%; height: 400px;" ></div>
+							<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 							<br>
 							<div class="pad-header">
 								<a class="text-blue popupTrigger small bold underlined" data-popup-id="contactInfo">Söker du en specifik person?</a>
@@ -160,7 +156,7 @@
 		<div class="background" style="background-image:url(../assets/img/backgrounds/coms.jpg)"></div>
 	</section>
 	<!-- Slide #32 -->
-	<section class="slide whiteSlide kenBurns fromLeft" id="">
+	<section class="slide whiteSlide fromLeft" id="">
 		<div class="content">
 			<div class="container container-md">
 				<div class="wrap">
